test/assets/invalid/application/add-arg-at-end.hs
a :: Int
a = const 1